Bug 121198 - CRASH in SdrPage::GetPageNum()
Summary: CRASH in SdrPage::GetPageNum()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: highest critical
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-06 10:58 UTC by Xisco Faulí
Modified: 2019-12-12 16:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["SdrPage::GetPageNum()"]
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-11-06 10:58:42 UTC
Steps to reproduce:
1. Open attachment 145434 [details] from bug 120366
2. Drag&Drop the slide to its right
3. On the sidebar, select an entry in Master Slide dropdown list
-Crash

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 990761f5297ef7bff78f62e7df63d4d4a20616a6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-11-06 11:00:28 UTC
Regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=9348b322a5c230dfcc2231661b73e480b130fcd9 bisected with bibisect-linux-64-5.4
Comment 2 Xisco Faulí 2018-11-06 11:08:12 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/62952/
Comment 3 Commit Notification 2018-11-06 15:55:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ebd24b39eee5ac72d33ad731e31469cf8f330631%5E%21

tdf#121198: fix crash in SdrPage::GetPageNum()

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-11-08 13:17:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/86d6ef3371b425d8ec1347902c54597c2749cae7%5E%21

tdf#121198: fix crash in SdrPage::GetPageNum()

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.