tdf#121198: fix crash in SdrPage::GetPageNum()

Regression from 9348b322a5c230dfcc2231661b73e480b130fcd9

Change-Id: Ibf9d6b65f0dbcc3a751e3ac5f3dbc28d908d6c25
Reviewed-on: https://gerrit.libreoffice.org/62952
Tested-by: Jenkins
(cherry picked from commit ebd24b39eee5ac72d33ad731e31469cf8f330631)
Reviewed-on: https://gerrit.libreoffice.org/62965
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 86d6ef3371b425d8ec1347902c54597c2749cae7)