sd/source/ui/slidesorter/controller/SlsInsertionIndicatorHandler.cxx
@@ -220,7 +220,7 @@ bool InsertionIndicatorHandler::IsInsertionTrivial (
     // to check that the insertion position is not directly in front or
     // directly behind the selection and thus moving the selection there
     // would not change the model.
-    return nInsertionIndex >= nFirstIndex && nInsertionIndex < nLastIndex;
+    return nInsertionIndex >= nFirstIndex && nInsertionIndex <= (nLastIndex+1);
 }
 
 bool InsertionIndicatorHandler::IsInsertionTrivial (const sal_Int8 nDndAction)
